feat: integrated frontend-auth with api